add alarm CRUD (#117)